--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="card-heading"></div>
                 <div class="card-body">
                     <h2 class="title">Registro</h2>
-                    <form method="post" id="formulario" name="formulario">
+                    <form method="post" id="formulario" name="formulario" style = "display: none;">
                         <div class="input-group">
                             <input class="input--style-1" type="text" placeholder="Nombre del equipo" name="name" required>
                         </div>
